--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "vue3",
+  "name": "k",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build"
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
     "@wangeditor/editor": "^5.1.23",
     "animate.css": "^4.1.1",
     "ant-design-vue": "^3.2.15",
-    "axios": "^1.1.3",
-    "dayjs": "^1.11.6",
-    "less": "^4.1.3",
+    "axios": "^1.2.2",
+    "core-js": "^3.8.3",
+    "dayjs": "^1.11.7",
     "mitt": "^3.0.0",
     "nprogress": "^0.2.0",
-    "pinia": "^2.0.23",
+    "pinia": "^2.0.28",
     "qs": "^6.11.0",
-    "vue": "^3.2.41",
-    "vue-router": "4"
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.2.0",
-    "unplugin-vue-components": "^0.22.9",
-    "vite": "^3.2.3"
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-service": "~5.0.0",
+    "less": "^4.0.0",
+    "less-loader": "^8.0.0"
   }
 }
